<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_register" android:title="@string/action_register"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_forget_password" android:title="@string/action_forget_password"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_pushdemo" android:title="@string/action_pushdemo"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_baidulogin" android:title="@string/action_baidulogin"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
